# arduino-nano-33

./: Cargo.toml  README.md  memory.x  sketch.json
.cargo/: config.toml
src/: gyro.rs  main.rs  orientation.rs  time.rs  usb.rs  wifi.rs
