[package]
authors = ["Robin Schroer <git@sulami.xyz>"]
edition = "2018"
readme = "README.md"
name = "arduino-nano-33-iot"
version = "0.1.0"

[dependencies]
panic-halt = "0.2.0"
wifi-nina = "0.1.2"
cortex-m = "0.7"
usbd-serial = "0.1"
usb-device = "0.2"
lsm6ds33 = "0.2"

[dependencies.arduino_nano33iot]
version = "0.7.0"
features = ["unproven", "usb"]

[dependencies.lexical-core]
version = "1.0"
default-features = false
features = ["write-floats", "write-integers"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
